applications/workspaces/upstream/controller/components/prometheus/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspaces-controller
spec:
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
      - name: manager
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        args:
        - "--leader-elect"
        - "--health-probe-bind-address=:8081"
        - "--metrics-bind-address=:8080"
