applications/workspaces/upstream/controller/components/prometheus/manager_metrics_patch.yaml
# This patch adds the args to allow exposing the metrics endpoint securely
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspaces-controller
spec:
  template:
    spec:
      containers:
      - name: manager
        args:
        - "--metrics-bind-address=0.0.0.0:8080"
