applications/workspaces/upstream/controller/components/prometheus/metrics_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: metrics
  name: workspaces-controller-metrics-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: controller-manager
