applications/workspaces/upstream/controller/components/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: metrics
  name: workspaces-controller-metrics-service
spec:
  ports:
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/component: controller-manager
