applications/workspaces/upstream/controller/components/prometheus/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller-manager
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: metrics
      protocol: TCP
    from: []
